Changed the constructor parameter function for determining available space to simply express unavailable space. This way, the user takes advantage of new logic that accounts for margin space when calculating available canvas space.

--- a/visualTests/shouldAccountForSpaceTakenByOtherElements.html
+++ b/visualTests/shouldAccountForSpaceTakenByOtherElements.html
@@ -9,7 +9,7 @@
         document.body.style.margin = 0;
         document.body.style.padding = 0;
         
-        var canvas = new FluidCanvas({drawableWidth: 200, drawableHeight: 200, availableHeight: function(){return $(window).height() - $('#theDiv').height();}});
+        var canvas = new FluidCanvas({drawableWidth: 200, drawableHeight: 200, unavailableHeight: function(){return $('#theDiv').height();}});
         
         var context = canvas.getContext('2d');
         context.fillStyle = '#EEEEEE';
